--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^0.8.5",
+    "bcrypt": "^0.8.6",
     "body-parser": "^1.13.3",
-    "express": "^4.13.3",
+    "express": "^4.14.0",
+    "npm": "^3.9.5",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.5.1",
-    "sqlite3": "^3.0.10",
+    "serve-favicon": "^2.3.0",
+    "sqlite": "^2.2.0",
+    "sqlite3": "^3.1.4",
+    "stable": "^0.1.5",
     "underscore": "^1.8.3"
+  },
+  "engines": {
+    "node": "6.2.2"
   }
 }
