--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mongodb": "^2",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
     "crypto-js": "^3.1.5",
